<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frontpagelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lg"
    android:orientation="vertical"
    >


    <Button
        android:layout_gravity="center_horizontal"

        android:id="@+id/bsq"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:background="@drawable/button_custom"
        android:text="@string/sq"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/btq"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_custom"
        android:text="@string/tq"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:id="@+id/bseeotherapps"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:background="@drawable/button_custom"
        android:text="@string/se"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:id="@+id/brateapp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="199dp"
        android:background="@drawable/button_custom"
        android:text="@string/rateapp"
        android:textColor="#ffffff"
        android:textSize="18sp" />
</LinearLayout>